# zsh-stdred

./: Makefile  README.md  stdred.plugin.zsh
Formula/: stdred.rb
src/: CMakeLists.txt  stdred.c
tests/: helper_tests.py  interactive.expect  plugin_tests.zsh
tests/fixtures/: emit.c
